--- a/index.html
+++ b/index.html
@@ -20,13 +20,56 @@
         </nav>
     </header>
     <main class="bg">
-        <table>
-            <thead>
-                <th>Name</th>
-                <th>Salary</th>
-            </thead>
-            <tbody id="tbodyId"></tbody>
-        </table>
+        <div id="cardsId" class="cards"></div>
+        </div>
+        <form id="formTag" style=" margin: 8px;">
+            <div class="card">
+                <table>
+                    <tr>
+                        <td>
+                            <label for="fName">Full Name : </label>
+                        </td>
+                        <td>
+                            <input type="text" id="fName" value=""></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="dep">Department:</label>
+                        </td>
+                        <td>
+                            <select name="dep" id="dep" style="width: 100%;">
+                                <option value="Administration">Administration</option>
+                                <option value="Marketing">Marketing</option>
+                                <option value="Development">Development</option>
+                                <option value="Finance">Finance</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="Lev">Level:</label>
+                        </td>
+                        <td>
+                            <select name="Lev" id="Lev"  style="width: 100%;">
+                                <option value="Junior">Junior</option>
+                                <option value="Mid-Senior">Mid-Senior</option>
+                                <option value="Senior">Senior</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="">Image Url:</label>
+                        </td>
+                        <td>
+                            <input type="text" id="imgU" value=""></input>
+                        </td>
+                    </tr>
+                </table>
+                <input type="submit"></input>
+            </div>
+        </form>
 
     </main>
     <footer>
@@ -35,7 +78,8 @@
         <a href="https://github.com/Zaidizz96"><img
                 src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt=""></a>
     </footer>
+    <script src="./JS/app.js"></script>
 </body>
-<script src="./JS/app.js"></script>
+
 
 </html>
