--- a/accounting.html
+++ b/accounting.html
@@ -17,8 +17,18 @@
         </nav>
     </header> 
     <main class="bg">
+        <h1>Accounting Page</h1>
+        <table id="tableTag">
+            <thead id="theaID">
+                <th class="thClass">Department Name</th>
+                <th class="thClass">Number Of Employees</th>
+                <th class="thClass">Avarage Salary </th>
+                <th class="thClass">Total Salary</th>
+            </thead>
+            <tbody id = "tbodyID">
 
-        <h1></h1>Accounting Page</h1>
+            </tbody>
+        </table>
     </main>
     <footer>
         <strong>Copyright ©️ Zaid Izziddine Company 2023</strong>
@@ -26,5 +36,6 @@
         <a href="https://github.com/Zaidizz96"><img
                 src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt=""></a>
     </footer>
+    <script src="./JS/accounting.js"></script>
 </body>
 </html>
